--- a/src/scripts/templates/index.html
+++ b/src/scripts/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="icon-512x512.png">
     <link rel="manifest" href="manifest.json">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
-    <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
     <title>Varesta Catalogue</title>
 </head>
 <body>
