--- a/src/scripts/styles/responsive.css
+++ b/src/scripts/styles/responsive.css
@@ -7,6 +7,9 @@
         font-size: 21px;
         padding: 10px;
     }
+    .hero {
+        background-image: url("../../public/heros/hero-image-sm.jpg");
+    }
 }
 
 @media screen and (min-width: 650px) {
@@ -59,6 +62,10 @@
         grid-column-start: 1;
         grid-column-end: 3;
     }
+
+    /* .hero {
+        background-image: url("../../public/heros/hero-image-sm.jpg");
+    } */
 
 
 }
